tests/rosetta/transpiler/C/barnsley-fern.error
compile failed: exit status 1: /tmp/ctranspile2360015175/barnsley-fern.mochi.c: In function ‘_mem’:
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:63:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   63 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile2360015175/barnsley-fern.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile2360015175/barnsley-fern.mochi.c: In function ‘main’:
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:103:40: warning: passing argument 1 of ‘list_append_int’ from incompatible pointer type [-Wincompatible-pointer-types]
  103 |                 line = list_append_int(line, &line_len, " ");
      |                                        ^~~~
      |                                        |
      |                                        const char **
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:20:34: note: expected ‘int *’ but argument is of type ‘const char **’
   20 | static int* list_append_int(int *arr, size_t *len, int val) {
      |                             ~~~~~^~~
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:103:57: warning: passing argument 3 of ‘list_append_int’ makes integer from pointer without a cast [-Wint-conversion]
  103 |                 line = list_append_int(line, &line_len, " ");
      |                                                         ^~~
      |                                                         |
      |                                                         char *
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:20:56: note: expected ‘int’ but argument is of type ‘char *’
   20 | static int* list_append_int(int *arr, size_t *len, int val) {
      |                                                    ~~~~^~~
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:103:22: warning: assignment to ‘const char **’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  103 |                 line = list_append_int(line, &line_len, " ");
      |                      ^
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:106:36: warning: passing argument 1 of ‘list_append_int’ from incompatible pointer type [-Wincompatible-pointer-types]
  106 |             grid = list_append_int(grid, &grid_len, line);
      |                                    ^~~~
      |                                    |
      |                                    const char ***
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:20:34: note: expected ‘int *’ but argument is of type ‘const char ***’
   20 | static int* list_append_int(int *arr, size_t *len, int val) {
      |                             ~~~~~^~~
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:106:53: warning: passing argument 3 of ‘list_append_int’ makes integer from pointer without a cast [-Wint-conversion]
  106 |             grid = list_append_int(grid, &grid_len, line);
      |                                                     ^~~~
      |                                                     |
      |                                                     const char **
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:20:56: note: expected ‘int’ but argument is of type ‘const char **’
   20 | static int* list_append_int(int *arr, size_t *len, int val) {
      |                                                    ~~~~^~~
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:106:18: warning: assignment to ‘const char ***’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  106 |             grid = list_append_int(grid, &grid_len, line);
      |                  ^
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:112:17: error: array subscript is not an integer
  112 |             grid[iy][ix] = "*";
      |                 ^
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:145:21: error: array subscript is not an integer
  145 |                 grid[iy][ix] = "*";
      |                     ^
/tmp/ctranspile2360015175/barnsley-fern.mochi.c:154:29: error: invalid operands to binary + (have ‘const char *’ and ‘const char *’)
  154 |                 line = line + grid[row][col];
      |                             ^ ~~~~~~~~~~~~~~
      |                                        |
      |                                        const char *

